--- a/content/TIL/2021/4/3.md
+++ b/content/TIL/2021/4/3.md
@@ -4,13 +4,13 @@ date: '2021-04-03'
 description: '삽질 시작 전에 목적과 감정을 써놓고 시작하자!'
 ---
 
-# 블로그!
+# 나의...블로그...
 
 나는 이 블로그를 꽤 오래 전에 만들었다.
 한창 열의에 불타서 열심히 개념을 공부하며 글을 적었었다.
 하지만 여러가지 사건으로 인해 그 활동을 안하게 되면서, 이 블로그는 방치되었다.
 
-# TIL!
+# TIL... 잔디...
 
 최근 공부를 하면서 노션에 매일 공부한 것들을 정리했다.
 뭔가 블로그 글로 쓰기에는 너무 작았고, 그렇다고 안남기기에는 아쉬운 내용들이기 때문이었다.
