--- a/content/TIL/2021/4/7.md
+++ b/content/TIL/2021/4/7.md
@@ -1,7 +1,7 @@
 ---
 title: 눈속임도 좋은 방법인 것 같다. feat.댓글, 토스트
 date: '2021-04-07'
-description: '4.3점'
+description: '4.3점, 댓글과 토스트를 만들면서 reply list, toast auto hide를 고민한 흔적'
 ---
 
 # 댓글 눈속임
