til add day score

--- a/content/TIL/2021/4/10.md
+++ b/content/TIL/2021/4/10.md
@@ -1,7 +1,7 @@
 ---
 title: css/position
 date: '2021-04-10'
-description: 'position, containing block, stacking context, block formatting context'
+description: '5.2점, position, containing block, stacking context, block formatting context'
 ---
 
 # Position
@@ -111,4 +111,5 @@ dom 트리에서 독립적으로 다루어 질 수 있게 브라우저에 선언
 1. containing block
 
 ---
+
 \# 즐겁다
