add a code clip on til

--- a/content/TIL/2021/4/11.md
+++ b/content/TIL/2021/4/11.md
@@ -38,6 +38,18 @@ description: '6.6점, tdd를 열심히 해보았다.'
 - 테스트 코드의 비용을 계산할 수 있다.
 - 필요한 test를 필요할 때 적용할 수 있다.
 
+## parameterized test
+
+jest 등 테스트 자동화 도구에서 인자를 여러개 사용할 수 있도록 만든 테스트 함수다.
+아래는 jest의 parameterized test 예시다. 아래 `prameters`는 `Array[]` 타입이다. 근데 iterable이면 되는 것 같다.
+
+```typescript
+it.each([...parameters])('test something', (each array item) => {
+  const result = doSomething();
+  expect(result).toBeTruthy();
+});
+```
+
 # readline
 
 node js에서 사용가능한 standard input 기능들을 지원해 주는 라이브러리다. 아래와 같이 사용할 수 있다.
