--- a/content/TIL/2021/4/12.md
+++ b/content/TIL/2021/4/12.md
@@ -27,3 +27,20 @@ description: '5.6점'
 
 - Root 혹은 view port객체에 대해서 가시성을 계속 감시하도록 설정합니다.
 - 필요하다면, observe를 통해 등록하고, unobserve를 통해 해소합니다.
+
+```javascript
+const intersectionObserver = new IntersectionObserver((entries) => {
+  entries.forEach((entry) => {
+    if (!entry.isIntersecting) {
+      return;
+    }
+
+    // do something
+  });
+});
+```
+
+### 참고하면 좋은 사이트
+
+- [프롬의 dev로그 Infinite Scroll Util](https://promm.dev/react/infinite-scroll-util/)
+- [MDN intersectionObserver](https://developer.mozilla.org/ko/docs/Web/API/IntersectionObserver)
