--- a/content/TIL/2021/4/20.md
+++ b/content/TIL/2021/4/20.md
@@ -1,7 +1,7 @@
 ---
 title: 나는 좀 더 효율적일 필요가 있습니다.
 date: '2021-04-20'
-description: '뭔가 많이 했는데, 생각나지 않는 오늘'
+description: '작업 계획, 완성도, 변수의도의도'
 ---
 
 # 배운것
@@ -12,7 +12,7 @@ description: '뭔가 많이 했는데, 생각나지 않는 오늘'
 
 ## 좀 더 완성도에 신경을 써야합니다.
 
-만들어 두고 나니 굉장히 많은 부분에서 망가집니다. 더 완성도에 대해 신경을 써야합니다. 동작 전체를 테스트할 수 없다면, 필요한 동작들을 가져오는 방식으로 만들어야 할 것 같습니다.
+만들어 두고 나니 굉장히 많은 부분에서 망가집니다. 더 완성도에 대해 신경을 써야합니다. 동작 전체를 테스트할 수 없다면, 필요한 동작들을 하나하나 테스트할 수 있도록 적어야 합니다.
 
 ## 변수의 의도는 명확해야 합니다.
 
