--- a/content/TIL/2021/4/20.md
+++ b/content/TIL/2021/4/20.md
@@ -1,7 +1,7 @@
 ---
 title: 나는 좀 더 효율적일 필요가 있습니다.
 date: '2021-04-20'
-description: '작업 계획, 완성도, 변수의도의도'
+description: '4.6점, 작업 계획, 완성도, 변수의도의도'
 ---
 
 # 배운것
