--- a/content/TIL/2021/4/26.md
+++ b/content/TIL/2021/4/26.md
@@ -1,7 +1,7 @@
 ---
-title: 확장성과 유지 보수성 간의 고민
+title: 
 date: '2021-04-26'
-description: '3.5점, textarea와 grid, 주의할 점들'
+description: ''
 ---
 
 ## textarea와 grid
