fix impossible trial

--- a/content/TIL/2021/5/9.md
+++ b/content/TIL/2021/5/9.md
@@ -1,12 +1,14 @@
 ---
 title: 피곤하다.
 date: '2021-05-09'
-description: '10만개 이상의 경우에서 dp하기'
+description: 'unordered_map으로 dp하기'
 ---
 
-> 진짜 10만개를 처리하진 않았습니다. 그래서 이게 10만개 이상의 경우에서 dp가 가능한 것인지는 모르겠습니다. 그냥 10만개를 처리할 때 어떻게 할 수 있을까 하다가 생각난 해결책을 공유해 봅니다.
+> 진짜 10만개를 처리하진 않았습니다 그냥 10만개를 처리할 때 어떻게 할 수 있을로 하다가 생각난 해결책을 공유해 봅니다.
 
-## 10만개 이상의 경우에서 dp하기
+> 절대 10만개 처리는 못할 것이라고 생각이 들어서 수정합니다. ㅎㅎ
+
+## unordered_map으로 dp하기
 
 백준의 [10942 팰린드롬?](https://www.acmicpc.net/problem/10942)을 푸는데, 요건 정리를 잘못해서 10만 X 10만 짜리 array를 선언했다. 결과는 당연히 컴파일 오류였고, 나는 새로운 자료구조가 필요했다.
 
@@ -32,5 +34,4 @@ hash table 자료구조를 사용하는 `unordered_map`은 hashable한 자료구
 
 ---
 
-\#눈은 장식인
-듯
+\#눈은 장식인듯
